--- a/.github/workflows/python-workflow.yml
+++ b/.github/workflows/python-workflow.yml
@@ -13,7 +13,9 @@ jobs:
       with:
         python-version: 3.11
 
+    - name: checkout repo
+      uses: actions/checkout@v3    
+
     - name: Install dependencies
-      uses: actions/checkout@v3
       run: |
         pip install -r ./requirements.txt
