--- a/.github/workflows/python-workflow.yml
+++ b/.github/workflows/python-workflow.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
 
     - name: checkout repo
-      uses: actions/checkout@v3       
+      uses: actions/checkout      
     - name: Set up Python 3.11
       uses: actions/setup-python@v5
       with:
